fixed navlinks x alignment

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -17,4 +17,11 @@
         margin: 0px 0 0 15px;
     }
 
+    .navlinks {
+        font-size: 0.8em;
+    }
+
+    .navlink:hover {
+        text-decoration: underline;
+    }
 }
